<resources>
    <string name="app_name">Driver</string>
    <string name="register_name">Name</string>
    <string name="register_email">Email Address</string>
    <string name="register_address">Postal Code (Optional)</string>
    <string name="register_password">Password</string>
    <string name="register_passwordConfirm">Confirm Password</string>
    <string name="register_bSignUp">Sign Me Up!</string>
    <string name="register_headerSignUp">Sign Up</string>
    <string name="signIn_email">Email</string>
    <string name="signIn_password">Password</string>
    <string name="signIn_headerSignIn">Sign In</string>
    <string name="signIn_bEnter">Enter</string>
    <string name="signIn_bRegister">Don\'t have an account?</string>
    <string name="register_streetAddress">Street Address (Optional)</string>
    <string name="facebook_app_id">646494705501590</string>
    <string name="current_location">Use Current Location</string>
    <string name="autocomplete_your_location">Your location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="passenger_bttn_text">PASSENGER</string>
    <string name="driver_bttn_text">DRIVER</string>
    <string name="title_activity_maps">Map</string>

    <string name="google_maps_key" translatable="false">AIzaSyB_R9ij5t4MLX8Y4fF7E1ZGRRmimpyAgj0</string>
    <string name="default_driver_name">Driver: Vladimir Putin</string>
    <string name="default_passenger_name">Donald Trump</string>
    <string name="default_driver_status">1 passenger, 2 free seats</string>
    <string name="needs_a_ride">Needs a ride to: </string>
    <string name="default_passenger_status">Needs a ride to: White House</string>
    <string name="start_button">Start</string>
    <string name="google_maps_key">AIzaSyB_R9ij5t4MLX8Y4fF7E1ZGRRmimpyAgj0</string>

    <!-- destination activity -->
    <string name="where_do_you_want_to_go">Where do you want to go?</string>
    <string name="where_are_you_now">Where are you now?</string>
    <string name="ok">OK</string>
</resources>
