<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/driver_image"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="driverImg"
        android:src="@mipmap/driver"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView android:id="@+id/driver_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:text="@string/default_driver_name"
        app:layout_constraintLeft_toRightOf="@+id/driver_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/driver_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/default_driver_status"
        app:layout_constraintLeft_toRightOf="@+id/driver_image"
        app:layout_constraintTop_toBottomOf="@+id/driver_name" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/passengers_container"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driver_status">
    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:layout_marginTop="196dp"
        app:layout_constraintTop_toBottomOf="@+id/passengers_container"
        android:layout_marginLeft="148dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
